tests/error/class-10.moc
@class Point {
    int x;
    int y;
}

+(id)test {
    [self x];
}

@end
